[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []


[dependencies]
wascc-codec = "0.7.0"
log = "0.4.8"
env_logger = "0.7.1"
